--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
   },
   "exclude": [
     "./dist",
-    "./node_modules",
+    "./node_modules"
   ],
-  "include": ["*.ts"]
+  "include": ["src", "examples"]
 }
