--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "circom-g4-grammar"]
 	path = circom-g4-grammar
+	branch = dev
 	url = https://github.com/distributed-lab/circom-g4-grammar.git
