--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "ejs": "^3.1.10"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.17",
     "@types/ejs": "^3.1.5",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^22.0.0",
+    "chai": "^5.1.1",
     "husky": "^9.1.4",
+    "mocha": "^10.7.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
