--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "circom-parser",
   "description": "",
   "version": "1.0.0",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "generate": "./parser/generate.sh",
     "lint-fix": "prettier --write '**/*.ts'",
+    "test": "mocha --exit",
     "publish-to-npm": "npm run build && npm run lint-fix && npm publish ./ --access public",
     "prepare": "husky"
   },
@@ -21,7 +23,7 @@
     "@types/ejs": "^3.1.5",
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.0.0",
-    "chai": "^5.1.1",
+    "chai": "^4.5.0",
     "husky": "^9.1.4",
     "mocha": "^10.7.0",
     "prettier": "^3.3.3",
